; ModuleID = '/home/carl/AnghaBench/zstd/lib/legacy/extr_zstd_v04.c_ZSTD_decodeFrameHeader_Part2.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/legacy/extr_zstd_v04.c_ZSTD_decodeFrameHeader_Part2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

@srcSize_wrong = common dso_local global i32 0, align 4
@frameParameter_unsupported = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_4__*, i8*, i64)* @ZSTD_decodeFrameHeader_Part2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ZSTD_decodeFrameHeader_Part2(%struct.TYPE_4__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i64, i64* %7, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %9, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i32, i32* @srcSize_wrong, align 4
  %16 = call i64 @ERROR(i32 %15)
  store i64 %16, i64* %4, align 8
  br label %36

17:                                               ; preds = %3
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 1
  %20 = load i8*, i8** %6, align 8
  %21 = load i64, i64* %7, align 8
  %22 = call i64 @ZSTD_getFrameParams(%struct.TYPE_5__* %19, i8* %20, i64 %21)
  store i64 %22, i64* %8, align 8
  %23 = call i64 (...) @MEM_32bits()
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %34

25:                                               ; preds = %17
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 1
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = icmp sgt i32 %29, 25
  br i1 %30, label %31, label %34

31:                                               ; preds = %25
  %32 = load i32, i32* @frameParameter_unsupported, align 4
  %33 = call i64 @ERROR(i32 %32)
  store i64 %33, i64* %4, align 8
  br label %36

34:                                               ; preds = %25, %17
  %35 = load i64, i64* %8, align 8
  store i64 %35, i64* %4, align 8
  br label %36

36:                                               ; preds = %34, %31, %14
  %37 = load i64, i64* %4, align 8
  ret i64 %37
}

declare dso_local i64 @ERROR(i32) #1

declare dso_local i64 @ZSTD_getFrameParams(%struct.TYPE_5__*, i8*, i64) #1

declare dso_local i64 @MEM_32bits(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
